--- a/style.css
+++ b/style.css
@@ -79,7 +79,6 @@ body {
 }
 
 .content {
-  background: #fcf;
   width: 60%;
   min-width: 600px;
   min-height: 100%;
@@ -93,6 +92,7 @@ body {
   width: 100%;
   margin-bottom: 10px;
   opacity: 0.8;
+  -webkit-transition: opacity 0.5s ease;
 }
 
 .content img:hover {
