--- a/style.css
+++ b/style.css
@@ -51,18 +51,20 @@ table {
 
 body {
   min-width: 1000px;
-  background: url(img/background.jpg);
+  background: #fff;
+  /*background: url(img/background.jpg);*/
 }
 
 .disclaimer {
   position: fixed;
-  background: #ffc;
+  background: #fff;
   width: 20%;
   height: 300px;
   top: 50%;
   margin-top: -150px;
   margin-left: 10%;
   min-width: 200px;
+  box-shadow: 0px 0px 10px #bbb;
 }
 
 .disclaimer__img {
@@ -71,12 +73,24 @@ body {
   width: 100px;
   height: 100px;
   display: block;
+  margin: 15px auto;
 }
 
 .disclaimer__text {
   font-size: 14pt;
   font-family: 'Courier New';
   text-align: center;
+  margin: 15px;
+  font-family: 'Neucha', cursive;
+}
+
+.disclaimer__text p {
+  text-shadow: 2px 3px 10px #000;
+}
+
+.disclaimer__text a {
+  font-size: 16pt;
+  color
 }
 
 .content {
@@ -86,17 +100,24 @@ body {
   overflow: hidden;
   float: right;
   margin-right: 5%;
-  padding: 10px;
+  margin-top: -90px;
 }
 
 .content img {
   width: 100%;
-  margin-bottom: 10px;
   opacity: 0.8;
   -webkit-transition: opacity 0.5s ease;
   opacity: 1;
+  position: relative;
+  display: block;
+  margin: 0 auto;
+  margin-bottom: 10px;
 }
 
 .content img:hover {
   opacity: 1.0;
+}
+
+.img_6, .img_7, .img_12, .img_2, .img_10, .img_11 {
+  width: 60% !important;
 }
